# gen-pair-airtable

./: Cargo.toml
src/: lib.rs
